media query fixed to display better on small screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -87,6 +87,9 @@ body    {
     .pic    {
         width: 100%;
     }
+}
+
+@media (max-width: 1440px) {
     #results    {
         font-size: 80%;
     }
